# algorand-smc

./: LICENSE  Makefile  README.md  pyproject.toml
algorandsmc/: errors.py  recipient.py  sender.py  smc_pb2.py  smc_pb2.pyi  utils.py
algorandsmc/demos/: undercollateralized_sender.py
algorandsmc/sigtemplates/: __init__.py  lsig.py  msig.py  paytxn.py
algorandsmc/templates/: __init__.py  lsig.py  msig.py  pay.py  paytxn.py  txn.py
demos/: block_loop.py  honest_recipient.py  honest_sender.py  performance_measure.py  undercollateralized_sender.py
protos/: smc.proto
