[tool.poetry]
name = "algorandsmc"
version = "0.1.0"
description = "Algorand implementation of Simple Micropayment Channels"
authors = ["Giorgio Ciotti <gciotti.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "algorandsmc"}]

[tool.poetry.dependencies]
python = "^3.10"
pyteal = "^0.22.0"
protobuf = "^4.21.12"
websockets = "^10.4"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pylint = "^2.16.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
autoflake = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
skip = ["smc_pb2.py", "smc_pb2.pyi"]
